# SlicerBrainTumorSegmentation

./: CMakeLists.txt  README.md  bratsFusionator.py
BatchBrainMRTumorSegmentation/: BatchBrainMRTumorSegmentation.py  CMakeLists.txt
BrainTumorSegmentation/: BrainTumorSegmentation.py
BrainTumorSegmentation/Resources/UI/: BrainTumorSegmentation.ui
